# ioh-explainer

./: .gitignore  README.md  animate.py  autocma-notebook.ipynb  autocma.py  autode-2.py  autode-notebook.ipynb  autode.py  bias_observations.md  cma_all_bias.py  cma_bias.ipynb  cma_bias_configs.ipynb  cma_es.tex  cma_es_AAC-notebook.ipynb  cma_es_analyse.ipynb  cma_es_analyse.py  cma_es_bias.py  cma_es_ela-features.py  cma_es_process_pkl.py  cma_es_run-configurations.py  cma_process_pkl.py  compare-new.tex  compare.tex  compare_de_cma.py  config.py  de-hall-of-fame.tex  de_AAC-notebook.ipynb  de_analyse.ipynb  de_analyse.py  de_bias.py  de_ela-features.py  de_process_pkl.py  de_run-configurations.py  doe-features.pkl  ela-features-cma.pkl  ela-features-de.pkl  ela-features.pkl  ela-features2.pkl  example-cma.py  example-de.py  (+14 more)
bias_results/: cma_bias_top20_bounds  cma_bias_top20_bounds.csv  cma_bias_top20_bounds.tex  cma_bias_top20_bounds_noSDIS  cma_bias_top20_bounds_noSDIS.csv  cma_bias_top20_bounds_noSDIS.tex  cma_bias_top20_centre  cma_bias_top20_centre.csv  cma_bias_top20_centre.tex  cma_bias_top20_centre_noSDIS  cma_bias_top20_centre_noSDIS.csv  cma_bias_top20_centre_noSDIS.tex  cma_bias_top20_unif  cma_bias_top20_unif.csv  cma_bias_top20_unif.tex  cma_bias_top20_unif_noSDIS  cma_bias_top20_unif_noSDIS.csv  cma_bias_top20_unif_noSDIS.tex  cmabias_bounds-tree  cmabias_centre-tree  cmabias_clusters-tree  cmabias_disc-tree  cmabias_unif-tree
experiments/: cma_es_AAC-notebook.ipynb  cma_es_analyse.py  cma_es_bias.py  cma_es_ela-features.py  cma_es_process_pkl.py  (+13 more)
(+105 files in other folders)
